@@ -454,3 +454,6 @@
 	* Fix another bug related to cipher and compression (leak and
         bad free)
 
+2010-11-25  Cedric BAIL
+
+	* Add EET_DATA_DESCRIPTOR_ADD_VAR_ARRAY_STRING.
